# afr-example-mcuboot-upgradable-wifi-firmware

./: .gitmodules  README.md
app_cm4/: CMakeLists.txt  Makefile  cy_helper.cmake  main.c
app_cm4/make_support/: afr.mk  mtb_cypress_source.mk  mtb_feature_ota.mk
app_cm4/script/: rename.py  sign_script.bash  sign_script.sh.in  src_to_bin.py
app_cm4/source/: ext_flash_map.c  led.c  led.h  wifi_fw_cfg.c
bootloader_cm0p/: Makefile  app.mk  config.mk  cy_serial_flash_prog.c  ext_flash_map.c  main.c
bootloader_cm0p/COMPONENT_CUSTOM_DESIGN_MODUS/TARGET_CY8CKIT-062S2-43012/: design.modus
bootloader_cm0p/COMPONENT_CUSTOM_DESIGN_MODUS/TARGET_CY8CPROTO-062-4343W/: design.modus
